<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kalambury</string>
    <string name="clear_text">Czyść</string>
    <string name="maluj">Maluj</string>
    <string name="size1">1</string>
    <string name="yield">Rezygnuj</string>
    <string name="accept">Zgaduj</string>

    <!-- score_screen '-->
    <string name="player">Gracz:</string>
    <string name="score">Wynik:</string>
    <string name="round">Runda:</string>
    <string name="score_default">0</string>
    <string name="round_default">0/10</string>

    <!-- ActionBar '-->
    <string name="timer_end">Koniec czasu!</string>
    <string name="scores">Wyniki</string>
    <string name="tools">Narzędzia</string>
    <string name="history">Historia</string>
    <string name="about">O grze</string>
    <string name="exit">Wyjście</string>
    <string name="start">Rozpocznij</string>
    <string name="dialog_leaving_game">Czy na pewno chcesz opuścić grę?</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
    <string name="title_activity_wi_fi_direct">WiFiDirectActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- WiFi Direct -->
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="start_game">Start Game</string>
    <string name="empty"></string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
</resources>
