<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:weightSum="1"
              tools:context=".Activities.GameScreen">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <view
                            android:layout_width="match_parent"
                            android:layout_height="261dp"
                            class="com.kalambury.kalamburyp2p.Components.PaintView"
                            android:id="@+id/paint_view"
                            android:layout_gravity="center_horizontal"
                            android:background="#ffffffff"
                            android:longClickable="true"
                            />

                    <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/table_decide"
                            android:layout_weight="0.2">

                            <TableRow
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <EditText
                                            android:layout_width="400dp"
                                            android:layout_height="match_parent"
                                            android:id="@+id/edit_answer"
                                            android:layout_margin="10dp"
                                            android:editable="true"
                                            android:enabled="true"/>

                                    <Button
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/yield"
                                            android:id="@+id/decide_button"
                                            android:onClick="onYield"/>
                            </TableRow>

                    </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:background="@color/screen_background_holo_light"
                android:id="@+id/drawing_settings"
                android:visibility="gone">

                    <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:weightSum="1"
                    android:background="#79585858"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:id="@+id/drawing_linear_layout"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp">

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_black"
                        android:background="#ff000000"
                        android:layout_marginLeft="2dp"
                        android:onClick="onClick"
                        android:layout_marginRight="2dp"/>

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_blue"
                        android:background="#ff0016ff"
                        android:layout_marginLeft="2dp"
                        android:onClick="onClick"
                        android:layout_marginRight="2dp"/>

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_green"
                        android:background="#ff4fad3f"
                        android:layout_marginLeft="2dp"
                        android:onClick="onClick"
                        android:layout_marginRight="2dp"/>

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_red"
                        android:background="#ffff0000"
                        android:layout_marginLeft="2dp"
                        android:onClick="onClick"
                        android:layout_marginRight="2dp"/>

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_yellow"
                        android:layout_marginLeft="2dp"
                        android:onClick="onClick"
                        android:layout_marginRight="2dp"
                        android:background="#fffff700"/>

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_brown"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:onClick="onClick"
                        android:background="#ff793c1e"/>

                <Button
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/button_white"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:onClick="onClick"
                        android:background="#ffffffff"
                        android:clickable="true"/>

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:id="@+id/color_preview"
                        android:background="#ff000000"
                        android:layout_margin="5dp"/>
            </LinearLayout>

            <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:showDividers="beginning|middle|end"
                    android:id="@+id/drawing_table_layout"
                    android:background="@color/screen_background_holo_light">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                    <SeekBar
                            android:layout_width="222dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/size_bar"
                            android:layout_column="0"
                            android:max="50"/>

                    <TextView
                            android:layout_width="60dp"
                            android:layout_height="40dp"
                            android:text="@string/size1"
                            android:textSize="30dp"
                            android:id="@+id/size_text"
                            android:layout_column="1"
                            android:layout_gravity="center|left"
                            android:gravity="center"
                            android:width="60dp"/>

                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clear_text"
                            android:id="@+id/clear_button"
                            android:layout_gravity="center_horizontal"
                            android:onClick="onClear"
                            android:layout_column="3"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_view"
                    android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>